// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProcessListTableItems component tests snapshot tests for no child instances 1`] = `
<DataListContent
  aria-label="Primary Content Details"
  className="kogito-management-console__embedded-list pf-m-compact"
  id="kie-datalist-expand-8035b580-6ae4-4aa8-9ec0-e18e19809e0b1"
  isHidden={false}
  key=".1"
  rowid="kie-datalist-item-8035b580-6ae4-4aa8-9ec0-e18e19809e0b1"
>
  <section
    aria-label="Primary Content Details"
    className="pf-c-data-list__expandable-content kogito-management-console__embedded-list pf-m-compact"
    hidden={false}
    id="kie-datalist-expand-8035b580-6ae4-4aa8-9ec0-e18e19809e0b1"
  >
    <div
      className="pf-c-data-list__expandable-content-body"
    >
      <KogitoEmptyState
        body="This process has no related sub processes"
        key="0"
        title="No child process instances"
        type={3}
      >
        <MockedComponent />
      </KogitoEmptyState>
    </div>
  </section>
</DataListContent>
`;

exports[`ProcessListTableItems component tests snapshot tests with an error(status) process instance 1`] = `
<ErrorPopover
  onRetryClick={[Function]}
  onSkipClick={[Function]}
  processInstanceData={
    Object {
      "addons": Array [
        "process-management",
      ],
      "businessKey": null,
      "childProcessInstances": Array [],
      "end": null,
      "endpoint": "http://localhost:4000/",
      "error": Object {
        "message": "Something went wrong",
        "nodeDefinitionId": "a1e139d5-4e77-48c9-84ae-3459188e90433n",
      },
      "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b1",
      "lastUpdate": null,
      "nodes": Array [
        Object {
          "definitionId": "CallActivity_2",
          "enter": "2019-10-22T04:43:01.143Z",
          "exit": "2019-10-22T04:43:01.146Z",
          "id": "7cdeba99-cd36-4425-980d-e59d44769a3e",
          "name": "Book Flight",
          "nodeId": "1",
          "type": "SubProcessNode",
        },
      ],
      "parentProcessInstance": null,
      "parentProcessInstanceId": null,
      "processId": "travels",
      "processName": "travels1",
      "roles": Array [],
      "rootProcessInstanceId": null,
      "serviceUrl": "http://localhost:4000",
      "start": null,
      "state": "ERROR",
      "variables": "{\\"flight\\":{\\"arrival\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"departure\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"flightNumber\\":\\"MX555\\"},\\"hotel\\":{\\"address\\":{\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"street\\":\\"street\\",\\"zipCode\\":\\"12345\\"},\\"bookingNumber\\":\\"XX-012345\\",\\"name\\":\\"Perfect hotel\\",\\"phone\\":\\"09876543\\"},\\"trip\\":{\\"begin\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"end\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"visaRequired\\":false},\\"traveller\\":{\\"address\\":{\\"city\\":\\"Karkow\\",\\"country\\":\\"Poland\\",\\"street\\":\\"palna\\",\\"zipCode\\":\\"200300\\"},\\"email\\":\\"rob@redhat.com\\",\\"firstName\\":\\"Rob\\",\\"lastName\\":\\"Rob\\",\\"nationality\\":\\"Polish\\"}}",
    }
  }
>
  <Popover
    bodyContent={
      <div>
        Something went wrong
      </div>
    }
    data-ouia-component-type="error-popover"
    data-ouia-safe={true}
    footerContent={
      Array [
        <Button
          className="pf-u-mr-sm"
          id="skip-button"
          onClick={[Function]}
          variant="secondary"
        >
          Skip
        </Button>,
        <Button
          className="pf-u-mr-sm"
          id="retry-button"
          onClick={[Function]}
          variant="secondary"
        >
          Retry
        </Button>,
      ]
    }
    headerContent={
      <div>
        Process error
      </div>
    }
    id="8035b580-6ae4-4aa8-9ec0-e18e19809e0b1"
    position="auto"
    zIndex={300}
  >
    <Popper
      appendTo={[Function]}
      distance={25}
      enableFlip={true}
      flipBehavior={
        Array [
          "top",
          "right",
          "bottom",
          "left",
          "top",
          "right",
          "bottom",
        ]
      }
      isVisible={false}
      onDocumentClick={[Function]}
      onDocumentKeyDown={[Function]}
      onPopperClick={[Function]}
      onTriggerClick={[Function]}
      onTriggerEnter={[Function]}
      placement="auto"
      popper={
        <FocusTrap
          active={false}
          aria-describedby="popover-8035b580-6ae4-4aa8-9ec0-e18e19809e0b1-body"
          aria-labelledby="popover-8035b580-6ae4-4aa8-9ec0-e18e19809e0b1-header"
          aria-modal="true"
          className="pf-c-popover"
          data-ouia-component-type="error-popover"
          data-ouia-safe={true}
          focusTrapOptions={
            Object {
              "clickOutsideDeactivates": true,
              "returnFocusOnDeactivate": true,
            }
          }
          onMouseDown={[Function]}
          paused={false}
          role="dialog"
          style={
            Object {
              "maxWidth": null,
              "minWidth": null,
              "opacity": 0,
              "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
            }
          }
        >
          <PopoverArrow />
          <PopoverContent>
            <PopoverCloseButton
              aria-label="Close"
              onClose={[Function]}
            />
            <PopoverHeader
              id="popover-8035b580-6ae4-4aa8-9ec0-e18e19809e0b1-header"
            >
              <div>
                Process error
              </div>
            </PopoverHeader>
            <PopoverBody
              id="popover-8035b580-6ae4-4aa8-9ec0-e18e19809e0b1-body"
            >
              <div>
                Something went wrong
              </div>
            </PopoverBody>
            <PopoverFooter
              id="popover-8035b580-6ae4-4aa8-9ec0-e18e19809e0b1-footer"
            >
              <Button
                className="pf-u-mr-sm"
                id="skip-button"
                onClick={[Function]}
                variant="secondary"
              >
                Skip
              </Button>
              <Button
                className="pf-u-mr-sm"
                id="retry-button"
                onClick={[Function]}
                variant="secondary"
              >
                Retry
              </Button>
            </PopoverFooter>
          </PopoverContent>
        </FocusTrap>
      }
      popperMatchesTriggerWidth={false}
      positionModifiers={
        Object {
          "bottom": "pf-m-bottom",
          "left": "pf-m-left",
          "right": "pf-m-right",
          "top": "pf-m-top",
        }
      }
      trigger={
        <Button
          isInline={true}
          variant="link"
        >
          <React.Fragment>
            <ErrorCircleOIcon
              className="pf-u-mr-sm"
              color="var(--pf-global--danger-color--100)"
            />
            Error
          </React.Fragment>
        </Button>
      }
      zIndex={300}
    >
      <FindRefWrapper
        onFoundRef={[Function]}
      >
        <Button
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id={48}
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            <ErrorCircleOIcon
              className="pf-u-mr-sm"
              color="var(--pf-global--danger-color--100)"
            >
              <MockedComponent />
            </ErrorCircleOIcon>
            Error
          </button>
        </Button>
      </FindRefWrapper>
    </Popper>
  </Popover>
</ErrorPopover>
`;

exports[`ProcessListTableItems component tests snapshot tests with disabled popup 1`] = `
<DisablePopup
  component={
    <DataListCheck
      aria-labelledby="kie-datalist-item-8035b580-6ae4-4aa8-9ec0-e18e19809e0b1"
      isDisabled={true}
    />
  }
  key=".1"
  processInstanceData={
    Object {
      "addons": Array [],
      "businessKey": null,
      "childProcessInstances": Array [],
      "end": null,
      "endpoint": null,
      "error": Object {
        "message": "Something went wrong",
        "nodeDefinitionId": "a1e139d5-4e77-48c9-84ae-3459188e90433n",
      },
      "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b1",
      "lastUpdate": null,
      "nodes": Array [
        Object {
          "definitionId": "CallActivity_2",
          "enter": "2019-10-22T04:43:01.143Z",
          "exit": "2019-10-22T04:43:01.146Z",
          "id": "7cdeba99-cd36-4425-980d-e59d44769a3e",
          "name": "Book Flight",
          "nodeId": "1",
          "type": "SubProcessNode",
        },
      ],
      "parentProcessInstance": null,
      "parentProcessInstanceId": null,
      "processId": "travels",
      "processName": "travels1",
      "roles": Array [],
      "rootProcessInstanceId": null,
      "serviceUrl": null,
      "start": null,
      "state": "ERROR",
      "variables": "{\\"flight\\":{\\"arrival\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"departure\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"flightNumber\\":\\"MX555\\"},\\"hotel\\":{\\"address\\":{\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"street\\":\\"street\\",\\"zipCode\\":\\"12345\\"},\\"bookingNumber\\":\\"XX-012345\\",\\"name\\":\\"Perfect hotel\\",\\"phone\\":\\"09876543\\"},\\"trip\\":{\\"begin\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"end\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"visaRequired\\":false},\\"traveller\\":{\\"address\\":{\\"city\\":\\"Karkow\\",\\"country\\":\\"Poland\\",\\"street\\":\\"palna\\",\\"zipCode\\":\\"200300\\"},\\"email\\":\\"rob@redhat.com\\",\\"firstName\\":\\"Rob\\",\\"lastName\\":\\"Rob\\",\\"nationality\\":\\"Polish\\"}}",
    }
  }
  rowid="kie-datalist-item-8035b580-6ae4-4aa8-9ec0-e18e19809e0b1"
>
  <Tooltip
    content="Management add-on capability not enabled & missing the kogito.service.url property. Contact your administrator to set up."
    distance={-15}
  >
    <Popper
      appendTo={[Function]}
      distance={-15}
      enableFlip={true}
      flipBehavior={
        Array [
          "top",
          "right",
          "bottom",
          "left",
          "top",
          "right",
          "bottom",
        ]
      }
      isVisible={false}
      onBlur={[Function]}
      onDocumentClick={false}
      onDocumentKeyDown={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTriggerEnter={[Function]}
      placement="top"
      popper={
        <div
          className="pf-c-tooltip"
          id="pf-tooltip-25"
          role="tooltip"
          style={
            Object {
              "maxWidth": null,
              "opacity": 0,
              "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
            }
          }
        >
          <TooltipArrow />
          <TooltipContent
            isLeftAligned={false}
          >
            Management add-on capability not enabled & missing the kogito.service.url property. Contact your administrator to set up.
          </TooltipContent>
        </div>
      }
      popperMatchesTriggerWidth={false}
      positionModifiers={
        Object {
          "bottom": "pf-m-bottom",
          "left": "pf-m-left",
          "right": "pf-m-right",
          "top": "pf-m-top",
        }
      }
      trigger={
        <DataListCheck
          aria-describedby="pf-tooltip-25"
          aria-labelledby="kie-datalist-item-8035b580-6ae4-4aa8-9ec0-e18e19809e0b1"
          isDisabled={true}
        />
      }
      zIndex={9999}
    >
      <FindRefWrapper
        onFoundRef={[Function]}
      >
        <DataListCheck
          aria-describedby="pf-tooltip-25"
          aria-labelledby="kie-datalist-item-8035b580-6ae4-4aa8-9ec0-e18e19809e0b1"
          isDisabled={true}
        >
          <div
            className="pf-c-data-list__item-control"
          >
            <div
              className="pf-c-data-list__check"
            >
              <input
                aria-describedby="pf-tooltip-25"
                aria-invalid={false}
                aria-labelledby="kie-datalist-item-8035b580-6ae4-4aa8-9ec0-e18e19809e0b1"
                checked={null}
                disabled={true}
                onChange={[Function]}
                type="checkbox"
              />
            </div>
          </div>
        </DataListCheck>
      </FindRefWrapper>
    </Popper>
  </Tooltip>
</DisablePopup>
`;
